2004-05-05  Michael Natterer  <mitch@gimp.org>
	* app/actions/debug-actions.c
	* app/actions/debug-commands.[ch]
	* menus/toolbox-menu.xml.in: added action & callback which XML-dump
	all UI managers.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13157 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/toolbox-menu.xml.in
+++ b/menus/toolbox-menu.xml.in
@@ -26,6 +26,7 @@
       <menu action="debug-menu" name="Debug">
         <menuitem action="debug-mem-profile" />
         <menuitem action="debug-dump-items" />
+        <menuitem action="debug-dump-managers" />
       </menu>
       <separator />
       <menuitem action="file-quit" />
