2004-05-06  Sven Neumann  <sven@gimp.org>
	* app/gui/resize-dialog.[ch]: cleaned up variable names and
	external API. Still quite a mess.

	* app/Makefile.am
	* app/actions/image-commands.c
	* app/actions/layers-commands.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13165 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -88,7 +88,7 @@ gimp_2_1_LDFLAGS = \
 	-u $(SYMPREFIX)info_window_create		\
 	-u $(SYMPREFIX)offset_dialog_new		\
 	-u $(SYMPREFIX)palette_import_dialog_show	\
-	-u $(SYMPREFIX)resize_widget_new		\
+	-u $(SYMPREFIX)resize_dialog_new		\
 	-u $(SYMPREFIX)stroke_dialog_new		\
 	-u $(SYMPREFIX)file_open_dialog_show		\
 	-u $(SYMPREFIX)file_save_dialog_show		\
