2004-05-08  Sven Neumann  <sven@gimp.org>
	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpunitcombobox.[ch]
	* app/widgets/gimpunitstore.[ch]: added a prototype of a unit menu
	based on GtkComboBox. Will move this to libgimpwidgets later...

	* app/display/gimpstatusbar.[ch]: use the new GimpUnitComboBox and
	GimpUnitStore.

	* themes/Default/gtkrc
	* themes/Small/gtkrc: hardcode the appearance of the
	GimpUnitComboBox. It uses a hack that doesn't work in list mode.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13190 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -206,6 +206,10 @@ libappwidgets_a_sources = \
 	gimpuimanager.h			\
 	gimpundoeditor.c		\
 	gimpundoeditor.h		\
+	gimpunitcombobox.c		\
+	gimpunitcombobox.h		\
+	gimpunitstore.c			\
+	gimpunitstore.h			\
 	gimpvectorstreeview.c		\
 	gimpvectorstreeview.h		\
 	gimpviewablebutton.c		\
