2004-05-10  Michael Natterer  <mitch@gimp.org>
	Prepare for making an interface out of GimpContainerView:

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpcontainerbox.[ch]: new GimpContainerView
	subclass which implements GimpDocked interface and contains the
	vbox-with-scrolled-window stuff common to GimpContainerGridView
	and GimpContainerTreeView.

	* app/widgets/gimpcontainerview.[ch]: removed that functionality
	here.

	* app/widgets/gimpcontainergridview.[ch]
	* app/widgets/gimpcontainertreeview.[ch]: derive them from
	GimpContainerBox.

	* app/gui/brush-select.c
	* app/gui/font-select.c
	* app/gui/gradient-select.c
	* app/gui/palette-select.c
	* app/gui/pattern-select.c
	* app/widgets/gimpcontainerpopup.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13202 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -49,6 +49,8 @@ libappwidgets_a_sources = \
 	gimpcolorpanel.h		\
 	gimpcomponenteditor.c		\
 	gimpcomponenteditor.h		\
+	gimpcontainerbox.c		\
+	gimpcontainerbox.h		\
 	gimpcontainereditor.c		\
 	gimpcontainereditor.h		\
 	gimpcontainergridview.c		\
