2004-05-10  Sven Neumann  <sven@gimp.org>
	* gimp-tips.xml.in: the menu's called "Layer", not "Layers" (bug
	#142279, spotted by Branko Collin).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13206 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/gimp-tips.xml.in
+++ b/tips/gimp-tips.xml.in
@@ -83,7 +83,7 @@
     Not all effects can be applied to all kinds of images.  This is
     indicated by a grayed-out menu-entry.  You may need to change
     the image mode to RGB (Image-&gt;Mode-&gt;RGB), add an alpha-channel
-    (Layers-&gt;Transparency-&gt;Add Alpha Channel) or flatten it
+    (Layer-&gt;Transparency-&gt;Add Alpha Channel) or flatten it
     (Image-&gt;Flatten Image).
     </_thetip>
   </tip>
