2004-05-11  Sven Neumann  <sven@gimp.org>
	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpcontainercombobox.[ch]: added new widget, almost
	finished.

	* app/widgets/gimpcontainerview.[ch]: added convenience functions
	to get and set the GimpContainerView properties.

	* app/widgets/gimpcontainerbox.c: use the convenience functions.

	* app/gui/file-new-dialog.c: use the new GimpContainerComboBox.

	* etc/templaterc: use "pixels" as the unit for pixel sized templates.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13223 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -51,6 +51,8 @@ libappwidgets_a_sources = \
 	gimpcomponenteditor.h		\
 	gimpcontainerbox.c		\
 	gimpcontainerbox.h		\
+	gimpcontainercombobox.c		\
+	gimpcontainercombobox.h		\
 	gimpcontainereditor.c		\
 	gimpcontainereditor.h		\
 	gimpcontainergridview.c		\
