2004-05-11  Sven Neumann  <sven@gimp.org>
	* docs/gimptool.1.in: fixed spelling.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13229 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/docs/gimptool.1.in
+++ b/docs/gimptool.1.in
@@ -200,7 +200,7 @@ to get the preferred flags to pass to the C compiler for plug-in building.
 to add a prefix to the install/uninstall path.
 .TP 8
 .B LDFLAGS
-to get the prefered flags for passing to the linker.
+to get the preferred flags for passing to the linker.
 .TP 8
 .B LIBS
 for passing extra libs that may be needed in the build process. For example,
