2004-05-12  Sven Neumann  <sven@gimp.org>
	* app/Makefile.am: make it compile again.

	* app/app-sections.txt
	* app/app.types: some minor updates, needs a lot more work.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13242 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/app/Makefile.am
+++ b/devel-docs/app/Makefile.am
@@ -62,9 +62,21 @@ GTKDOC_CFLAGS = \
 	-I$(includedir)
 
 unused_symbols = \
-	-u $(SYMPREFIX)gimp_container_filter	\
-	-u $(SYMPREFIX)gimp_xml_parser_new	\
-	-u $(SYMPREFIX)gimp_drawable_stroke_vectors
+	-u $(SYMPREFIX)gimp_container_filter		\
+	-u $(SYMPREFIX)gimp_xml_parser_new		\
+	-u $(SYMPREFIX)gimp_drawable_stroke_vectors	\
+	\
+	-u $(SYMPREFIX)convert_dialog_new		\
+	-u $(SYMPREFIX)grid_dialog_new			\
+	-u $(SYMPREFIX)info_dialog_new			\
+	-u $(SYMPREFIX)info_window_create		\
+	-u $(SYMPREFIX)offset_dialog_new		\
+	-u $(SYMPREFIX)palette_import_dialog_show	\
+	-u $(SYMPREFIX)resize_dialog_new		\
+	-u $(SYMPREFIX)stroke_dialog_new		\
+	-u $(SYMPREFIX)file_open_dialog_show		\
+	-u $(SYMPREFIX)file_save_dialog_show		\
+	-u $(SYMPREFIX)color_notebook_new
 
 GTKDOC_LIBS = \
 	$(unused_symbols)						     \
@@ -74,6 +86,7 @@ GTKDOC_LIBS = \
         $(top_builddir)/app/units.o					     \
         $(top_builddir)/app/config/libappconfig.a			     \
         $(top_builddir)/app/gui/libappgui.a				     \
+        $(top_builddir)/app/menus/libappmenus.a				     \
 	$(top_builddir)/app/actions/libappactions.a			     \
         $(top_builddir)/app/display/libappdisplay.a			     \
         $(top_builddir)/app/tools/libapptools.a				     \
