2004-05-13  Michael Natterer  <mitch@gimp.org>
	* app/menus/Makefile.am: added file-menu.[ch] and
	file-dialog-menu.[ch]

	* app/menus/menus.[ch]: removed menus_open_recent_add()...

	* app/menus/file-menu.[ch]: ...and added it here as file_menu_setup().

	* app/menus/image-menu.c
	* app/menus/toolbox-menu.c: changed accordingly.

	* app/menus/file-dialog-menu.[ch]: added factored out code from the
	file-open and file-save menus as file_dialog_menu_setup().

	* app/menus/file-open-menu.c
	* app/menus/file-save-menu.c: call file_dialog_menu_setup().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13254 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/menus/Makefile.am
+++ b/app/menus/Makefile.am
@@ -7,6 +7,10 @@ libappmenus_a_SOURCES = \
 	menus.c			\
 	menus.h			\
 	\
+	file-dialog-menu.c	\
+	file-dialog-menu.h	\
+	file-menu.c		\
+	file-menu.h		\
 	file-open-menu.c	\
 	file-open-menu.h	\
 	file-save-menu.c	\
