2004-05-19  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/plug_in.pdb: made plugin_icon_register() an
	underscore-prefixed function which needs to be wrapped.

	* libgimp/gimpplugin_pdb.[ch]: regenerated.

	* libgimp/Makefile.am
	* libgimp/gimp.h
	* libgimp/gimpplugin.[ch]: new files containing
	gimp_plugin_icon_register() which has no "icon_data_length"
	parameter and determines it from the passed icon data.

	* libgimp/gimp.def: added gimp_plugin_icon_register.

	* plug-ins/common/plugindetails.c
	* plug-ins/common/screenshot.c
	* plug-ins/common/uniteditor.c
	* plug-ins/print/print.c: don't pass the icon_data_length.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13302 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/libgimp/Makefile.am
+++ b/libgimp/Makefile.am
@@ -179,6 +179,8 @@ libgimp_2_0_la_SOURCES = \
 	gimppixelfetcher.h	\
 	gimppixelrgn.c		\
 	gimppixelrgn.h		\
+	gimpplugin.c		\
+	gimpplugin.h		\
 	gimpproceduraldb.c	\
 	gimpproceduraldb.h	\
 	gimpregioniterator.c	\
@@ -231,6 +233,7 @@ gimpinclude_HEADERS = \
 	gimppatternselect.h	\
 	gimppixelfetcher.h	\
 	gimppixelrgn.h		\
+	gimpplugin.h		\
 	gimpproceduraldb.h	\
 	gimpregioniterator.h	\
 	gimpselection.h		\
