--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@ app/actions/debug-actions.c
 app/actions/dialogs-actions.c
 app/actions/dockable-actions.c
 app/actions/documents-actions.c
+app/actions/documents-commands.c
 app/actions/drawable-actions.c
 app/actions/drawable-commands.c
 app/actions/edit-actions.c
